EPMRPP-113576 || Add manual last modified updates