@@ -249,6 +249,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
     }
     testItem = new TestItemBuilder(testItem).overwriteAttributes(rq.getAttributes())
         .addDescription(rq.getDescription()).get();
+    testItem.setLastModified(Instant.now());
     testItemRepository.save(testItem);
 
     return COMPOSE_UPDATE_RESPONSE.apply(itemId);
@@ -273,7 +274,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
     List<TestItemActivityResource> before =
         testItems.stream().map(it -> TO_ACTIVITY_RESOURCE.apply(it, projectDetails.getProjectId()))
-            .collect(Collectors.toList());
+            .toList();
 
     if (LinkExternalIssueRQ.class.equals(request.getClass())) {
       LinkExternalIssueRQ linkRequest = (LinkExternalIssueRQ) request;
@@ -290,7 +291,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
     testItemRepository.saveAll(testItems);
     List<TestItemActivityResource> after =
         testItems.stream().map(it -> TO_ACTIVITY_RESOURCE.apply(it, projectDetails.getProjectId()))
-            .collect(Collectors.toList());
+            .toList();
 
     before.forEach(it -> messageBus.publishActivity(new LinkTicketEvent(it,
         after.stream().filter(t -> t.getId().equals(it.getId())).findFirst().get(),
@@ -364,6 +365,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
     items.forEach(
         it -> {
           validate(projectDetails, user, it);
+          it.setLastModified(Instant.now());
           ItemInfoUtils.updateDescription(bulkUpdateRq.getDescription(), it.getDescription())
               .ifPresent(it::setDescription);
         });
